added display color

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr 1fr;
 }
+.wrapper div{
+  background-color: blue;
+}
 {
   box-sizing: border-box;
 }
