--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
     display: grid;
     grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 50% 50%;
+    gap: 10px;
   }
 }
 
