added overfllow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 .wrapper div{
   background-color: blue;
+  overflow: hidden;
 }
 {
   box-sizing: border-box;
